# Glyptotheka

./: .dockerignore  .env.example  .eslintignore  .gitignore  .prettierignore  BUG_FIX_NETWORK_BINDING.md  CHANGELOG.md  COMPOSITE_PREVIEW_IMPLEMENTATION.md  COMPOSITE_PREVIEW_SPEC.md  DOCKER_CONFIGURATION.md  FEATURE_IMAGE_INHERITANCE.md  FEATURE_VERIFICATION_IMAGE_INHERITANCE.md  IMAGE_CAROUSEL_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  ISSUE_PARENT_FOLDER_IMAGES.md  LICENSE  MAKERWORLD_STYLING.md  README.md  RESCAN_IMAGE_BUG_REPORT.md  STL_PREVIEW_TEST_RESULTS.md  STL_THUMB_INTEGRATION.md  STYLING_UPDATE.md  UI_LAYOUT_ASSESSMENT.md  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile  TESTING_NOTES.md
backend/.cargo/: config.toml
backend/migrations/: 001_initial.sql  002_performance_indexes.sql  003_remove_stl_thumb_path.sql  004_project_previews.sql  005_stl_preview_priority.sql  006_image_inheritance.sql  007_stl_categories.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: browse_routes.rs  mod.rs  routes.rs
backend/src/db/: connection.rs  migrations.rs
backend/src/models/: cached_file.rs  folder.rs  image_file.rs  mod.rs  project.rs  stl_file.rs  tag.rs
backend/src/services/: composite_preview.rs  download.rs  folder_service.rs  image_cache.rs  mod.rs  rescan.rs  scanner.rs  search.rs  stl_preview.rs
backend/src/utils/: error.rs  mod.rs  pagination.rs
backend/tests/: api_tests.rs  benchmark_previews.sh  benchmark_results.txt  rescan_test.rs  scan_tests.rs  search_service_test.rs  stl_preview_test.rs
docs/: CPU_LIMITS.md  (+4 more)
(+162 files in other folders)
