[package]
name = "glyptotheka-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
sha2 = "0.10"
async_zip = { version = "0.0.16", features = ["tokio"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "6.0.0"
stl-thumb = "0.5"
image = "0.24"

[dev-dependencies]
tempfile = "3.8"
